--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@yidun/quickpass-plugin-cordova",
+  "name": "cordova-plugin-quickpass",
   "version": "1.3.1",
   "description": "yidun quickpass cordova plugin",
   "cordova": {
-    "id": "cordova-plugin-yidun-quickpass",
+    "id": "cordova-plugin-quickpass",
     "platforms": [
       "android",
       "ios"
